# asaa

./: .gitignore  Cargo.toml  setup.ps1  setup.sh
src/: auth.rs  main.rs  sys_monitor.rs
ui/: glass_panel.slint  icon_button.slint  shell.slint  theme.slint
